<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/update_profile"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />


        <ImageView
            android:id="@+id/img"
            android:layout_margin="6dp"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="150dp">
        </ImageView>
        <Button
            android:layout_margin="3dp"
            android:id="@+id/imageSelect"
            android:text="@string/select_image"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp">
        </Button>

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />


        <Button
            android:id="@+id/button_update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/update_info"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


     =


    </LinearLayout>


</RelativeLayout>