<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgPoster"
                android:layout_margin="5dp"
                android:layout_width="150dp"
                android:layout_height="150dp">
            </ImageView>
           <RelativeLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <TextView
                   android:id="@+id/title"
                   android:textAlignment="center"
                   android:layout_width="match_parent"
                   android:textStyle="bold"
                   android:textSize="14dp"
                   android:textColor="@color/cardview_dark_background"
                   android:layout_height="20dp">
               </TextView>
               <LinearLayout
                   android:layout_below="@+id/title"
                   android:id="@+id/l1"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_margin="3dp"
                       android:textSize="12dp"
                       android:text="@string/genres"
                       android:textStyle="bold"
                       android:textColor="@color/design_default_color_primary_dark"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"/>
                   <TextView
                       android:layout_margin="3dp"
                       android:id="@+id/genText"
                       android:textSize="12dp"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp">
                   </TextView>
               </LinearLayout>
               <LinearLayout
                   android:layout_below="@+id/l1"
                   android:id="@+id/l2"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:textStyle="bold"
                       android:textColor="@color/design_default_color_primary_dark"

                       android:layout_margin="3dp"
                       android:textSize="12dp"
                       android:text="@string/vote_average"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"/>
                   <TextView
                       android:layout_margin="3dp"
                       android:id="@+id/voteText"
                       android:textSize="12dp"
                       android:layout_width="match_parent"
                       android:layout_height="30dp">
                   </TextView>
               </LinearLayout>
               <LinearLayout
                   android:layout_below="@+id/l2"
                   android:id="@+id/l3"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_margin="3dp"
                       android:textSize="12dp"
                       android:textStyle="bold"
                       android:textColor="@color/design_default_color_primary_dark"

                       android:text="@string/overview"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"/>
                   <TextView
                       android:layout_margin="3dp"
                       android:id="@+id/over"
                       android:textSize="12dp"
                       android:layout_width="match_parent"
                       android:layout_height="30dp">
                   </TextView>
               </LinearLayout>
               <ImageButton
                   android:id="@+id/favBtn"
                   android:layout_margin="5dp"
                   android:background="@drawable/fav_off"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:layout_width="24dp"
                   android:layout_height="24dp">
               </ImageButton>
           </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>